juju: algumas mudanças e home feita

--- a/escola/templates/escola/aluno_calendario.html
+++ b/escola/templates/escola/aluno_calendario.html
@@ -88,13 +88,7 @@
                     <div class="calendar-card-header">
                         <h2 class="calendar-title">Calendário</h2>
 
-                        <a href="{% url 'aluno_evento' %}" class="btn-add-event">
-                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <line x1="12" y1="5" x2="12" y2="19"></line>
-                                <line x1="5" y1="12" x2="19" y2="12"></line>
-                            </svg>
-                            Adicionar evento
-                        </a>
+                        
                     </div>
 
                     <div class="calendar-main">
@@ -116,7 +110,7 @@
                                 <option value="11">Dezembro</option>
                             </select>
                         </div>
-
+</div>
                         <div class="full-calendar">
                             <div class="calendar-weekdays">
                                 <div class="weekday">Dom</div>
