--- a/escola/static/escola/css/aluno.css
+++ b/escola/static/escola/css/aluno.css
@@ -591,20 +591,75 @@ a, span {
   margin: 0 auto;
 }
 
+/* CARD PRINCIPAL DO CALENDÁRIO */
 .calendar-card {
-  background-color: white;
-  border-radius: 16px;
-  padding: 32px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
-  border: 2px solid #e0e0e0;
+    background: #fff;
+    border-radius: 15px;
+    padding: 30px;
+    border: 2px solid #c4e5e7;
+    width: 100%;
+    min-height: 500px;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;  
 }
 
+/* Título + botão de adicionar */
 .calendar-card-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 24px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
+
+/* Ajuste dos controles */
+.calendar-controls h3 {
+    font-size: 22px;
+}
+
+.month-selector {
+    font-size: 16px;
+}
+
+/* Ajuste da grade do calendário */
+.full-calendar {
+    margin-top: 10px;
+}
+
+.calendar-weekdays {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.calendar-grid {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    gap: 10px;
+  
+    font-size: 18px;          /* deixa igual ao padrão dos cards */
+}
+
+/* Cada dia */
+.calendar-day {
+    padding: 12px 0;
+    text-align: center;
+}
+
+/* Dia selecionado */
+.calendar-day.selected {
+    background: #052c6d;
+    color: white;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 
 .calendar-title {
   font-size: 24px;
@@ -1390,6 +1445,7 @@ a, span {
   padding: 20px;             /* espaço interno */
   background-color: white;   /* fundo branco */
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.10);
+  height: 330px;
 }
 
 .calendar-widget:hover{
