--- a/escola/templates/escola/aluno_dashboard.html
+++ b/escola/templates/escola/aluno_dashboard.html
@@ -152,7 +152,7 @@
                 <a href="{% url 'aluno_calendario' %}" style="text-decoration: none; color: inherit;">
                     <section>
                         <div class="widget calendar-widget">
-                            <h3 class="widget-title">Outubro 2025</h3>
+                            <h3 class="widget-title">Fevereiro 2025</h3>
                             <div class="calendar">
                                 <div class="calendar-header">
                                     <div class="day-name">D</div><div class="day-name">S</div><div class="day-name">T</div><div class="day-name">Q</div><div class="day-name">Q</div><div class="day-name">S</div><div class="day-name">S</div>
@@ -160,7 +160,11 @@
                                 <div class="calendar-days">
                                     <div class="day">1</div><div class="day">2</div><div class="day">3</div><div class="day">4</div><div class="day">5</div>
                                     <div class="day">6</div><div class="day">7</div><div class="day">8</div><div class="day">9</div><div class="day">10</div>
-                                    <div class="day" style="background-color: #092F76; color: white; border-radius: 50%;">25</div>
+                                    <div class="day">11</div><div class="day">12</div><div class="day">13</div><div class="day">14</div><div class="day">15</div>
+                                    <div class="day">16</div><div class="day">17</div><div class="day">18</div><div class="day">19</div><div class="day">20</div>
+                                    <div class="day">21</div><div class="day">22</div><div class="day">23</div><div class="day">24</div><div class="day">25</div>
+                                    <div class="day">26</div><div class="day">27</div>
+                                    <div class="day" style="background-color: #092F76; color: white; border-radius: 50%;">28</div>
                                 </div>
                             </div>
                         </div>
