Fix logo image source in index.html

--- a/escola/templates/escola/index.html
+++ b/escola/templates/escola/index.html
@@ -239,7 +239,7 @@
     <div class="nexus-about-container">
         <div class="nexus-header">
             <div class="nexus-logo">
-                <img src="{% static 'escola/img/logo-nexus.png' %}" alt="Logo NEXUS" class="nexus-logo-image">
+                <img src="{% static 'escola/img/Logo Nexus.png' %}" alt="Logo NEXUS" class="nexus-logo-image">
             </div>
             <h2 class="nexus-title">SOMOS A NEXUS</h2>
         </div>
